syntax = "proto3";
package tmp;

message Commands {
  repeated Command commands = 1;
}
/* a message that server can send to clients */
message Command {
  oneof command {
    TickCommand tick_command = 1;
    IdCommand id_command = 2;
    WriterCommand writer_command = 3;
  }
}

/** A time update, representing a unit time has passed. */
message TickCommand {
  bytes random_seed = 1;
}

/**
 * Client has connected or disconnected or changed id.
 */
message IdCommand {
  /** Id that has been removed. If empty, it means a new client id has joined. */
  string old_id = 1;
  /** Id that has been added. If empty, it means a client has disconnected. */
  string new_id = 2;
}

/**
 * Broadcast of a message from a client.
 */
message WriterCommand {
  /** Id of client */
  string id = 1;
  
  /** Custom message sent by a client. */
  bytes command = 2;
}

service RoomService {
  /* rpc debug(DebugRequest) returns (DebugResponse) {} */
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {}
  rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse) {}
}

message CreateRoomRequest {
  string room_id = 1;
  RoomSetting room_setting = 2;
}

message CreateRoomResponse {
}

message DeleteRoomRequest {
  string room_id = 1;
}

message DeleteRoomResponse {
}

message DebugRequest {
  bytes b = 1;
  string s = 2;
  uint32 i32 = 3;
  uint64 i64 = 4;
  oneof oo {
    uint32 oi32 = 5;
    uint64 oi64 = 6;
  }
}

message DebugResponse {
  bytes b = 1;
  string s = 2;
  uint32 i32 = 3;
  uint64 i64 = 4;
  oneof oo {
    uint32 oi32 = 5;
    uint64 oi64 = 6;
  }
}

message RoomSetting {
  TickSetting tick = 1;
  EndOfLifeSetting end_of_life = 2;
}

message TickSetting {
  // number of bytes
  uint32 size = 1;
  uint32 frequency_millis = 2;
}

message EndOfLifeSetting {
  uint32 max_duration_in_seconds = 1;
}

/* message UpdateSetting { */
/*   bool setting = 1; */
/*   bool write_identity = 2; */
/*   bool read_identity = 3; */
/* } */

/* message Permission { */
/*   // empty means everyone is allowed */
/*   repeated Identity allowed_identities = 1; */
 
/*   // 0 means everyone is allowed */
/*   uint32 max_user =2; */
/* } */

/* message Identity { */
/*   oneof identity { */
/*     CryptoIdentity crypto_identity = 1; */
/*   } */
/* } */

/* message CryptoIdentity { */
/*   enum Type { */
/*     unspecified = 0; */
/*     curve_25519 = 1; */
/*   } */
/*   Type type = 1; */
/*   string base64 = 2; */
/* } */

/* message PublicIdentity { */
/*   string name = 1; */
/* } */
